--- a/web.html
+++ b/web.html
@@ -9,6 +9,7 @@
    
     <!-- Archivos CSS y Bootstrap-->
     <?!= obtenerDatosHTML('css'); ?>
+    <?!= obtenerDatosHTML('cssTarjetas'); ?>
 
 </head>
 <body>
@@ -25,12 +26,9 @@
     <!-- JS -->
     <?!= obtenerDatosHTML('js'); ?>
     <?!= obtenerDatosHTML('eventos'); ?>
-    <?!= obtenerDatosHTML('botonesContacto'); ?>
-    <?!= obtenerDatosHTML('modales'); ?>
     <?!= obtenerDatosHTML('notificaciones'); ?>
-    <?!= obtenerDatosHTML('tarjetas'); ?>
-    <?!= obtenerDatosHTML('tarjetasCuadradas'); ?>
-    <?!= obtenerDatosHTML('tablas'); ?>
+    <?!= obtenerDatosHTML('crud'); ?>
+    <?!= obtenerDatosHTML('Contacto'); ?>
     <?!= obtenerDatosHTML('loaders'); ?>
     <?!= obtenerDatosHTML('plantillas'); ?>
     
