--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
   <div class="d-flex justify-content-center my-3">
     
     <!-- 
-    <button type="button" class="btn btn-success m-2" onclick="crearTarjetasCuadradas()">
+    <button type="button" class="btn btn-success m-2" onclick="crearTarjetas()">
       <i class="bi bi-postcard"></i>
     </button>
     <button type="button" class="btn btn-success m-2" onclick="crearTablaContactos()">
@@ -12,7 +12,7 @@
     </button>
     -->
 
-    <button type="button" class="btn btn-primary m-2" onclick="abrirModalCrearContacto()">
+    <button id="insertarContacto" type="button" class="btn btn-primary m-2">
       <i class="bi bi-person-plus"></i>
     </button>
     <button type="button" class="btn btn-warning m-2" onclick="importarContactos()">+ 5</button>
@@ -23,8 +23,6 @@
     </button>
 
       <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby='desplegableEstilos' span style="cursor: pointer"></span>
-        <li><a class="dropdown-item" id='tarjetasEstiloTabla'>Estilos tabla</a></li>
-        <li><a class="dropdown-item" id="tarjetasEstiloFila">Estilos fila</a></li>
         <li><a class="dropdown-item" id="tarjetasEstilo1">Estilo tarjeta 1</a></li>
         <li><a class="dropdown-item" id="tarjetasEstilo2">Estilo tarjeta 2</a></li>
         <li><a class="dropdown-item" id="tarjetasEstilo3">Estilo tarjeta 3</a></li>
